--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,12 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Imports: 
     calendar,
     dplyr,
     googlesheets4,
+    lubridate,
     rvest,
     stringr,
     tibble
