--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,11 +12,10 @@ RoxygenNote: 7.3.1
 Imports: 
     calendar,
     dplyr,
+    glue,
     googlesheets4,
     lubridate,
-    rvest,
-    stringr,
-    tibble
+    stringr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
